h11types/src/parser/p_h11request_meta/rfc_9110/snapshots/h11types__parser__p_h11request_meta__rfc_9110__rfc_9110_s5_3__1-tc2_fieldorder_set_cookie_same.snap
---
source: h11types/src/parser/p_h11request_meta/rfc_9110/rfc_9110_s5_3.rs
expression: "HeaderTc { tc_input, tester, res, meta }"
---
HeaderTc {
    tc_input: "Content-length: 20x\r\nSet-Cookie: 3\r\nSet-Cookie: 2\r\nSet-Cookie: 1\r\n",
    tester: HeaderTest {
        seen: [],
    },
    res: Err(
        InvalidHeaderValue(
            17,
        ),
    ),
    meta: H11RequestMeta {
        method: Unknown,
        target_loc: None,
        version: Unknown,
        transfer_encoding: None,
        transfer_compression: None,
        body_length: None,
        headers_end: None,
    },
}
